--- a/test/fixtures/groups.yml
+++ b/test/fixtures/groups.yml
@@ -6,6 +6,9 @@
 #  name       :string(255)
 #  created_at :datetime
 #  updated_at :datetime
+#  state      :string(255)
+#  started_at :datetime
+#  ends_at    :datetime
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
