--- a/test/fixtures/task_completions.yml
+++ b/test/fixtures/task_completions.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: task_completions
+#
+#  id           :integer          not null, primary key
+#  goal_task_id :integer
+#  user_id      :integer
+#  created_at   :datetime
+#  updated_at   :datetime
+#  group_id     :integer
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined.  If you add columns to the
